force-app/main/default/objects/Product_Group__c/fields/IsCoreProduct__c.field-meta.xml
<CustomField>
    <fullName>IsCoreProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCoreProduct</label>
    <type>Checkbox</type>
</CustomField>