force-app/main/default/objects/Product_Group__c/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Legacy_ID</label>
    <length>155</length>
    <type>Text</type>
</CustomField>