force-app/main/default/objects/Product_Group__c/fields/TFS_Projects__c.field-meta.xml
<CustomField>
    <fullName>TFS_Projects__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TFS Projects</label>
    <length>255</length>
    <type>Text</type>
</CustomField>