force-app/main/default/objects/Product_Group__c/fields/Update_Related_DI_Names__c.field-meta.xml
<CustomField>
    <fullName>Update_Related_DI_Names__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-010771 

Switch to tell nightly apex job what has changed and to update the related DI Names.</description>
    <label>Update Related DI Names</label>
    <type>Checkbox</type>
</CustomField>