force-app/main/default/objects/Product_Group__c/listViews/All_Product_Groups.listView-meta.xml
<ListView>
    <fullName>All_Product_Groups</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>TFS_Collection__c</columns>
    <columns>IsCoreProduct__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Product Groups</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>