force-app/main/default/objects/Product_Group__c/listViews/All_TFS_Product_Groups.listView-meta.xml
<ListView>
    <fullName>All_TFS_Product_Groups</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>TFS_Collection__c</columns>
    <columns>IsCoreProduct__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TFS_Collection__c</field>
        <operation>startsWith</operation>
        <value>http</value>
    </filters>
    <label>All TFS Product Groups</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>