force-app/main/default/objects/Product_Group__c/listViews/Support_Contract_Groups.listView-meta.xml
<ListView>
    <fullName>Support_Contract_Groups</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>TFS_Projects__c</columns>
    <columns>TFS_Collection__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>support</value>
    </filters>
    <label>Support Contract Groups</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>